########################################################################
#                                                                      #
#    Author of Makefile.am: Andrej Prsa <andrej.prsa@fmf.uni-lj.si>    #
#                                                                      #
########################################################################
#                                                                      #
# This program is free software; you can redistribute it and/or modify #
# it under the terms of the GNU General Public License as published by #
# the Free Software Foundation; either version 2, or (at your option)  #
# any later version.                                                   #
#                                                                      #
# This program is distributed in the hope that it will be useful,      #
# but WITHOUT ANY WARRANTY; without even the implied warranty of       #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        #
# GNU General Public License for more details.                         #
#                                                                      #
# You should have received a copy of the GNU General Public License    #
# along with this program; if not, write to the Free Software          #
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.            #
#                                                                      #
########################################################################

phoebehelpdir = $(datadir)/phoebe_scripter/help
phoebehelp_DATA = apply_doppler_shift.help          \
                  apply_rotational_broadening.help  \
                  compute_critical_potentials.help  \
                  get_spectrum_from_repository.help \
                  if.help                           \
                  info.help                         \
		  resample_spectrum.help            \
                  while.help                        \
                  broaden_spectrum.help

EXTRA_DIST = $(phoebehelp_DATA)
